
libdevicesinc_HEADERS = \
        DeviceHandler.h \
        DeviceManager.h \
        KeyboardHandler.h \
        MouseHandler.h

if MAC_FRAMEWORK
libdevicesincdir = $(MAC_FRAMEWORK_PREFIX)/$(MAC_FRAMEWORK_NAME).framework/Versions/$(MAC_FRAMEWORK_VERSION)/Headers/devices
else
libdevicesincdir = $(includedir)/Quarter/devices
endif