
libeventhandlersinc_HEADERS = \
        DragDropHandler.h \
        EventManager.h \
        EventHandler.h \
        ContextMenuHandler.h

if MAC_FRAMEWORK
libeventhandlersincdir = $(MAC_FRAMEWORK_PREFIX)/$(MAC_FRAMEWORK_NAME).framework/Versions/$(MAC_FRAMEWORK_VERSION)/Headers/eventhandlers
else
libeventhandlersincdir = $(includedir)/Quarter/eventhandlers
endif