
libeventhandlersinc_HEADERS = \
        DragDropHandler.h \
        EventFilter.h \
        FocusHandler.h

if MAC_FRAMEWORK
libeventhandlersincdir = $(MAC_FRAMEWORK_PREFIX)/$(MAC_FRAMEWORK_NAME).framework/Versions/$(MAC_FRAMEWORK_VERSION)/Headers/eventhandlers
else
libeventhandlersincdir = $(includedir)/Quarter/eventhandlers
endif